package fr.uga.l3miage.pc.prisonersdilemma.Strategies;



public interface Strategy {
    public Decision execute();
}

